--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -6,11 +6,9 @@
     table-layout: fixed;
 }
 
-.circle_left {
-    display: inline-block;
-    width: 8px;
-    height: 8px;
-    background-color: #f47c3c;
-    border-radius: 50%;
-    margin-right: 5px;
+.imgperfil{
+    max-height: 173px; 
+    max-width:185px; 
+    height: 173px; 
+    width:185px;
 }
