--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -12,3 +12,13 @@
     height: 173px; 
     width:185px;
 }
+
+.mbc-3{
+    margin-bottom: 0;
+}
+
+@media (max-width: 575.98px) { 
+    .mbc-3{
+        margin-bottom: 15px!important;
+    }
+}
